--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -1,3 +1,41 @@
+.nav {
+  display: grid;
+  grid-template-columns: 10% 50% 18% 10% 12%;
+  justify-items: end;
+  align-items: center;
+  background-color: #ffbe6e;
+  margin: 0px;
+}
+
+.formNav {
+  display: grid;
+  grid-template-columns: 50% 40% 10%;
+  justify-content: space-around;
+  width: 600px;
+}
+
+#searchQuery {
+  padding: 5px;
+  border-top: none;
+  border-bottom: none;
+  border-left: none;
+}
+
+#location {
+  border: none;
+}
+
+#search {
+  border: none;
+  background-color: transparent;
+  width: fit-content;
+  margin-left: 5px;
+}
+
+.logo {
+  width: 75%;
+}
+
 .profile-dropdown {
   position: absolute;
 }
