--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -1,4 +1,38 @@
 /* TODO: Add sitewide styles */
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    color: #1f2f44;
+    background-color: #fff2eb;
+}
+
+h1 {
+    font-family: "Prata", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+button {
+    background-color: #f78a63;
+}
+
+input {
+    background-color: #FFFBF6;
+}
+
+.paws-filled {
+    color: #5f5ba8;
+}
+
+.paws-unfilled {
+    color: #c3cddf;
+}
+
+a {
+    color: #2f7a5a;
+}
+
+a:hover {
+    text-decoration: underline;
 }
