--- a/react-vite/src/components/SearchFormPage/SearchForm.css
+++ b/react-vite/src/components/SearchFormPage/SearchForm.css
@@ -2,7 +2,8 @@
   display: flex;
   width: 700px;
   border: 1px solid black;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-content: center;
   padding: 15px 10px 10px 10px;
 }
 
@@ -14,15 +15,14 @@
 .businessesImage {
   height: 200px;
   width: 300px;
-  padding: 10px;
-
+  padding: 20px;
 }
+
 
 .businessDeets {
   display: flex;
   flex-direction: column;
-  align-self: center;
   text-wrap: wrap;
-  padding: 40px 0;
+  padding: 40px 20px;
 
 }
