--- a/react-vite/src/components/SearchFormPage/SearchForm.css
+++ b/react-vite/src/components/SearchFormPage/SearchForm.css
@@ -2,7 +2,6 @@
   display: flex;
   width: 700px;
   border: 1px solid black;
-  justify-content: space-between;
   align-content: center;
   padding: 15px 10px 10px 10px;
 }
@@ -23,6 +22,6 @@
   display: flex;
   flex-direction: column;
   text-wrap: wrap;
-  padding: 40px 20px;
+  padding: 20px 20px 0 0;
 
 }
