--- a/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
+++ b/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
@@ -91,3 +91,35 @@
 .priceSubcat {
     margin-top: -3px;
 }
+
+.businessDetails {
+    width: 65%;
+    padding: 45px;
+    margin: auto;
+}
+
+.businessDetails button {
+    border-radius: 3px;
+    padding: 12px 16px 12px 16px;
+    font-size: 16px;
+    font-weight: 600;
+    border: #c3cddf 1px solid;
+    background-color: transparent;
+}
+
+.businessDetails_writeAReview {
+    color: white;
+    border: #5f5ba8 1px solid !important;
+    background-color: #5f5ba8 !important;
+}
+
+
+.businessDetails hr {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.locationHours {
+    display: flex;
+    gap: 30px;
+}
