--- a/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
+++ b/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
@@ -13,7 +13,7 @@
 
 .businessPhotoHeader::before {
     content: '';
-    z-index: 10;
+    /* z-index: 10; */
     width: 100%;
     height: 425px;
     object-fit: cover;
