--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -1,10 +1,11 @@
 .nav {
   display: grid;
-  grid-template-columns: 15% 45% 17% 8% 10%;
+  grid-template-columns: 15% 45% 13% 11% 16%;
   gap: 20px;
   align-items: center;
   background-color: #ffbe6e;
   margin: 0px;
+  width: 100%;
 }
 
 .searchForm {
@@ -68,6 +69,7 @@
 .leftnav {
   display: flex;
   justify-content: center;
+  width: fit-content;
 }
 
 .profile-dropdown {
