--- a/react-vite/src/components/SearchFormPage/SearchForm.css
+++ b/react-vite/src/components/SearchFormPage/SearchForm.css
@@ -4,6 +4,9 @@
   border: 1px solid black;
   align-content: center;
   padding: 15px 10px 10px 10px;
+  margin-left: 250px;
+  margin-bottom: 20px;
+  position: relative;
 }
 
 .businessCards:hover {
@@ -49,4 +52,12 @@
 .priceInputFilter {
   padding: 15px 0;
   border-bottom: 1px solid rgb(195, 194, 196);
+}
+
+
+.filterComponent {
+  display: flex;
+  width: 200px;
+  flex-direction: column;
+  position: absolute;
 }
