--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -1,6 +1,6 @@
 .nav {
   display: grid;
-  grid-template-columns: 15% 45% 13% 11% 16%;
+  grid-template-columns: 12% 45% 13% 11% 11%;
   gap: 20px;
   align-items: center;
   background-color: #ffbe6e;
@@ -17,7 +17,7 @@
 
 .formNav {
   display: grid;
-  grid-template-columns: 50% 40% 5%;
+  grid-template-columns: 50% 40% 10%;
   justify-content: space-around;
 }
 
@@ -43,7 +43,7 @@
   border: none;
   background-color: transparent;
   width: fit-content;
-  margin-left: 5px;
+  justify-self: center;
 }
 
 .logo {
@@ -66,10 +66,13 @@
   margin-top: 3px;
 }
 
-.leftnav {
-  display: flex;
-  justify-content: center;
+.leftNav {
+  display: grid;
+  justify-content: space-between;
+  justify-self: center;
+  align-items: center;
   width: fit-content;
+  grid-column: 5 / 6;
 }
 
 .profile-dropdown {
