--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -89,8 +89,8 @@
   background-color: #FFFBF6;
   right: 0;
   left: inherit;
-  margin-top: 5px;
-  margin-right: 50px;
+  margin-top: -10px;
+  margin-right: 65px;
   border-radius: 5px;
 }
 
@@ -104,4 +104,28 @@
   background-color: #c3cddf;
   padding: 10px;
   border-radius: 5px;
+  cursor: pointer;
+}
+
+.avatar {
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: top;
+  width: 36px;
+  height: 36px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
+
+.avatar:hover {
+  cursor: pointer;
+}
+
+.toolTip {
+  display: none;
+  font-weight: 400;
+}
+
+.avatar:hover .toolTip {
+  display: block;
 }
