--- a/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
+++ b/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
@@ -214,3 +214,21 @@
     grid-area: stats;
     font-weight: 500;
 }
+
+.reviewImagesWrapper {
+    display: flex;
+    gap: 15px;
+}
+
+.reviewImagesContainer {
+    width: 300px;
+    height: 225px;
+}
+
+.reviewImages {
+    object-fit: cover;
+    object-position: center;
+    border-radius: 3px;
+    width: 100%;
+    height: 100%;
+}
