--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -23,14 +23,38 @@ button {
     font-family: "Poppins", sans-serif;
     border: none;
     border-radius: 5px;
-    padding: 5px 10px 5px 10px;
-    color: #1f2f44;
+    padding: 10px 15px 10px 15px;
+    font-size: 16px;
+    color: #FFFFFF;
+}
+
+button:disabled {
+    background-color: #c3cddf;
+    color: #768c9f;
 }
 
 input {
     background-color: #FFFBF6;
     font-family: "Poppins", sans-serif;
     color: #1f2f44;
+    border-radius: 3px;
+    border: #c3cddf solid 1px;
+}
+
+input button {
+    background-color: #FFFBF6;
+    font-family: "Poppins", sans-serif;
+    color: #1f2f44;
+    border-radius: 3px;
+    border: #c3cddf solid 1px;
+}
+
+select {
+    background-color: #FFFBF6;
+    font-family: "Poppins", sans-serif;
+    color: #1f2f44;
+    border-radius: 3px;
+    border: #c3cddf solid 1px;
 }
 
 .paws-filled {
