added styles to create biz form

--- a/react-vite/src/components/CreateBusinessPage/CreateBusiness.css
+++ b/react-vite/src/components/CreateBusinessPage/CreateBusiness.css
@@ -1,6 +1,17 @@
 .createBizForm {
   display: flex;
   flex-direction: column;
-  max-width: fit-content;
-  margin-left: 25px;
+  max-width: 415px;
+  margin: auto;
+  padding-top: 30px;
+}
+
+.errors {
+  color: #c24830;
+  font-weight: 500;
+
+}
+
+.inputFields {
+  margin-top: 15px;
 }
