--- a/react-vite/src/context/Modal.css
+++ b/react-vite/src/context/Modal.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  z-index: 50;
 }
 
 #modal-background {
@@ -21,5 +21,5 @@
 
 #modal-content {
   position: absolute;
-  background-color: white;
+  background-color: #fff2eb;
 }
