--- a/react-vite/src/components/AllPhotosModal/AllPhotos.css
+++ b/react-vite/src/components/AllPhotosModal/AllPhotos.css
@@ -5,7 +5,7 @@
     margin-left: 30px;
     margin-right: 30px;
     padding-bottom: 30px;
-    max-width: calc(100vh - 0) !important;
+    width: 75vw !important;
 }
 
 .modal h1 {
@@ -17,14 +17,16 @@
 }
 
 .allPhotosContainer {
+    /* display: grid;
+    grid-template-columns: repeat(4, 1fr); */
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 300px), 1fr));
+    gap: 15px;
     justify-items: center;
 }
 
 .allPhotosWrapper {
-    width: 300px;
+    width: 100%;
     height: 225px;
 }
 
