--- a/react-vite/src/context/Modal.css
+++ b/react-vite/src/context/Modal.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   z-index: 50;
+  border-radius: 5px;
 }
 
 #modal-background {
@@ -22,4 +23,5 @@
 #modal-content {
   position: absolute;
   background-color: #fff2eb;
+  border-radius: 8px;
 }
