--- a/react-vite/src/components/AllPhotosModal/AllPhotos.css
+++ b/react-vite/src/components/AllPhotosModal/AllPhotos.css
@@ -37,3 +37,14 @@
     width: 100%;
     height: 100%;
 }
+
+.photoCredit {
+    position: relative;
+    bottom: 33px;
+    right: 0px;
+    background-color: rgba(0, 0, 0, .3);
+    padding: 3px;
+    color: #FFFFFF;
+}
+
+.photoCredit text {}
