--- a/react-vite/src/components/AllPhotosModal/AllPhotos.css
+++ b/react-vite/src/components/AllPhotosModal/AllPhotos.css
@@ -1,6 +1,5 @@
 .modal {
     max-height: calc(100vh - 200px) !important;
-    overflow-y: auto !important;
     /* margin-top: 10px;
     margin-left: 30px;
     margin-right: 30px;
@@ -8,13 +7,27 @@
     width: 75vw !important;
 }
 
-.modal h1 {
+.allPhotosHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    grid-template-rows: 1fr;
     position: sticky;
     top: 0px;
     width: 100%;
     padding-bottom: 10px;
     background-color: #fff2eb;
     z-index: 1;
+}
+
+.allPhotosHeader button {
+    border-radius: 3px;
+    padding: 12px 16px 12px 16px;
+    font-size: 16px;
+    font-weight: 600;
+    border: #c3cddf 1px solid;
+    background-color: transparent;
+    color: #1f2f44;
 }
 
 .allPhotosContainer {
@@ -24,6 +37,7 @@
     grid-template-columns: repeat(auto-fit, minmax(min(100%, 300px), 1fr));
     gap: 15px;
     justify-items: center;
+    overflow-y: auto !important;
 }
 
 .allPhotosWrapper {
