--- a/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
+++ b/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
@@ -119,10 +119,11 @@
     font-weight: 600;
     border: #c3cddf 1px solid;
     background-color: transparent;
+    color: #1f2f44;
 }
 
 .businessDetails_writeAReview {
-    color: white;
+    color: white !important;
     border: #5f5ba8 1px solid !important;
     background-color: #5f5ba8 !important;
 }
