confirm delete modal for biz created

--- a/react-vite/src/components/ManageBusinessesPage/ManageBusiness.css
+++ b/react-vite/src/components/ManageBusinessesPage/ManageBusiness.css
@@ -59,3 +59,10 @@
 .deleteBiz {
   margin: auto;
 }
+
+.deleteModal {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  align-items: center;
+}
