--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -106,3 +106,21 @@
   padding: 10px;
   border-radius: 5px;
 }
+
+.forbiz-dropdown {
+  position:absolute;
+  z-index: 2;
+  padding: 10px;
+  width: fit-content;
+  background-color: #FFFBF6;
+  margin-top: 162px;
+  right: 270px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.forBizButton {
+  color: black;
+  padding: 0;
+  background-color: #ffbe6e;
+}
