added styling for trash can

--- a/react-vite/src/components/AllPhotosModal/AllPhotos.css
+++ b/react-vite/src/components/AllPhotosModal/AllPhotos.css
@@ -62,6 +62,9 @@
     color: #FFFFFF;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
+
+    display: flex;
+    justify-content: space-between;
 }
 
 .page {
