added conditional if only 1 biz

--- a/react-vite/src/components/AllPhotosModal/AllPhotos.css
+++ b/react-vite/src/components/AllPhotosModal/AllPhotos.css
@@ -62,9 +62,12 @@
     color: #FFFFFF;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
+}
 
+.photoCreditText {
     display: flex;
     justify-content: space-between;
+
 }
 
 .page {
