--- a/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
+++ b/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
@@ -139,6 +139,13 @@
     gap: 30px;
 }
 
+.hours {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    column-gap: 20px;
+    font-weight: 500;
+}
+
 .businessContact {
     position: sticky;
     top: 20px;
