--- a/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
+++ b/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
@@ -52,6 +52,12 @@
     background-color: rgba(255, 255, 255, 0.2);
     padding: 3px 8px 3px 8px;
     border-radius: 3px;
+    cursor: pointer;
+}
+
+.seeHours:hover,
+.seeAllPhotos button:hover {
+    background-color: rgba(255, 255, 255, 0.4);
 }
 
 .seeAllPhotos {
