--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -42,6 +42,12 @@ textarea {
     border: #c3cddf solid 1px;
 }
 
+input,
+textarea,
+select {
+    padding: 5px;
+}
+
 input button {
     background-color: #FFFBF6;
     font-family: "Poppins", sans-serif;
@@ -80,6 +86,13 @@ a {
     cursor: pointer;
 }
 
+.modalLink:hover {
+    color: #5f5ba8;
+    text-decoration: underline;
+    font-weight: 600;
+    cursor: pointer;
+}
+
 a:hover {
     text-decoration: underline;
     cursor: pointer;
@@ -94,4 +107,31 @@ hr {
 
 button:hover {
     cursor: pointer;
+}
+
+.loginSignupModals {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    width: 455px;
+}
+
+.loginSignupModals button {
+    width: 103%;
+}
+
+
+.loginSignupModals .errors {
+    color: #c24830;
+    font-weight: 500;
+    margin-top: -8px;
+    margin-left: -1px;
+}
+
+.loginSignupModals input {
+    width: 100%;
+}
+
+.loginSignupModals select {
+    width: 103%;
 }
