--- a/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
+++ b/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
@@ -60,6 +60,10 @@
     background-color: rgba(255, 255, 255, 0.4);
 }
 
+.bizDeetsButton button:hover {
+    background-color: rgba(195, 205, 233, 0.4);
+}
+
 .seeAllPhotos {
     position: relative;
     left: 76%;
@@ -128,12 +132,15 @@
     color: #1f2f44;
 }
 
-.businessDetails_writeAReview {
-    color: white !important;
-    border: #5f5ba8 1px solid !important;
-    background-color: #5f5ba8 !important;
+.businessDetails_writeAReview button {
+    color: white;
+    border: #5f5ba8 1px solid;
+    background-color: #5f5ba8;
 }
 
+.businessDetails_writeAReview button:hover {
+    background-color: rgba(95, 91, 168, 0.9);
+}
 
 .businessDetails hr {
     margin-top: 30px;
