ok done for now

--- a/react-vite/src/components/BusinessFormPage/CreateBusiness.css
+++ b/react-vite/src/components/BusinessFormPage/CreateBusiness.css
@@ -16,13 +16,21 @@
   padding: 5px 1px;
 }
 
+.errors {
+  color: #c24830;
+  font-weight: 500;
+  margin-top: -14px;
+  margin-left: -1px;
+
+}
+
 .errorsImage {
   color: #c24830;
   font-weight: 500;
 }
 
 .imageInput {
-  width: 413px;
+  width: 405px;
 }
 
 .hidden {
