--- a/react-vite/src/components/UserPage/UserPage.css
+++ b/react-vite/src/components/UserPage/UserPage.css
@@ -1,3 +1,54 @@
 * {
     
 }
+
+.user-sidebar-container{
+    display: flex;
+    flex-direction: column;
+    width: min-content;
+    padding-left: 2em;
+}
+
+.user-summary-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.user-navigation-container {
+    display: flex;
+    flex-direction: column;
+    width: min-content;
+}
+
+div.single-user-navigation{
+    display: inline-block;
+    /* display: flex;
+    flex-direction: row; */
+    width: max-content;
+    /* justify-content: spa; */
+}
+
+div.single-user-navigation:hover{
+    cursor: pointer;
+}
+
+i {
+    display: inline-block;
+}
+
+i.fa-paw {
+    display: inline-block;
+}
+
+
+h4.nav-description{
+    display: inline-block;
+}
+
+img.pfp {
+ max-height: 5em;
+ max-width: 5em;  
+ border-radius: 50%; 
+ /* justify-content: center; */
+}
