--- a/react-vite/src/components/UserPage/UserPage.css
+++ b/react-vite/src/components/UserPage/UserPage.css
@@ -14,6 +14,18 @@
     flex-direction: column;
     justify-content: center;
 }
+.user-summ-stats{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 7em;
+}
+
+.user-summ-stat-item{
+    padding: 0% 2%;
+    display: inline-block;
+    /* flex-direction: row; */
+}
 
 .user-navigation-container {
     display: flex;
@@ -42,7 +54,7 @@ i.fa-paw {
 }
 
 
-h4.nav-description{
+h4.nav-description, h5 {
     display: inline-block;
 }
 
@@ -50,5 +62,6 @@ img.pfp {
  max-height: 5em;
  max-width: 5em;  
  border-radius: 50%; 
+
  /* justify-content: center; */
 }
