--- a/react-vite/src/components/ReviewForms/ReviewForm.css
+++ b/react-vite/src/components/ReviewForms/ReviewForm.css
@@ -4,44 +4,49 @@
     width: fit-content;
     padding: 0 1em 1em 1em;
     border: solid #5f5ba8 1px;
+    background-color: #FFFBF6;
 }
 
 
 #review-input {
     height: 10em;
     width: 35em;
+    border: none;
 }
 
 
-div.stars-container{
+div.stars-container {
     display: flex;
     flex-direction: row;
-    background-color: #FFFFFF;
+    background-color: #FFFBF6;
     width: fit-content;
-    padding: 3px 6px 3px 6px;
-    border-radius: 5px;
+    /* padding: 3px 6px 3px 6px;
+    border-radius: 5px; */
 }
 
-div.stars-container > .rating-descriptions{
+div.stars-container>.rating-descriptions {
     background-color: none;
 }
 
-#paws-and-descriptions{
+.descriptions-container {
+    align-content: center;
+}
+
+.descriptions-container paws-unfilled:hover {
+    cursor: pointer;
+}
+
+#paws-and-descriptions {
     display: flex;
     flex-direction: row;
 }
 
-form {
-    display: flex;
-    margin-left: 15%;
-    flex-direction: column;
-}
-
-button, input[type="file"] {
+button,
+input[type="file"] {
     width: fit-content;
     padding: 1% 2%;
 }
 
-.custom-error-page{
+.custom-error-page {
     margin: 2em 10em;
 }
