--- a/react-vite/src/components/HomePage/HomePage.css
+++ b/react-vite/src/components/HomePage/HomePage.css
@@ -86,10 +86,10 @@
 
 .categoryStuff {
     color: white;
-    font-weight: 700;
+    font-weight: 300;
     position: relative;
     margin: auto;
-    font-size: larger;
+    font-size: 18px;
     z-index: 2;
     bottom: 80px;
 }
@@ -98,4 +98,10 @@
     display: flex;
     flex-direction: column;
 
+}
+
+.categoriesHeader {
+    margin: 30px 0 0;
+    text-align: center;
+    font-size: 38px;
 }
