--- a/react-vite/src/components/SearchFormPage/SearchForm.css
+++ b/react-vite/src/components/SearchFormPage/SearchForm.css
@@ -102,3 +102,29 @@
   margin-top: 50px;
   font-size: large;
 }
+
+.filter-buttons {
+  display: flex;
+  flex-direction: column;
+}
+
+.filter-buttons button {
+  margin: 10px 0 0 28px;
+}
+
+.apply-filter-button {
+  border-radius: 3px;
+  padding: 12px 16px 12px 16px;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.clear-filter-button {
+  border-radius: 3px;
+  padding: 12px 16px 12px 16px;
+  font-size: 16px;
+  font-weight: 600;
+  border: #c3cddf 1px solid;
+  background-color: transparent;
+  color: #1f2f44;
+}
