--- a/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
+++ b/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
@@ -141,6 +141,7 @@
     font-size: 16px;
     color: #FFFFFF;
     font-weight: 400;
+    margin-top: 14px;
 }
 
 .businessDetails_writeAReview button {
