adding hover functionality

--- a/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
+++ b/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
@@ -220,6 +220,10 @@
     grid-auto-rows: 22px;
 }
 
+.userInfo:hover{
+    cursor: pointer;
+}
+
 .avatar {
     grid-area: avatar;
     font-size: 60px;
