--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -132,15 +132,12 @@
 .forbiz-dropdown {
   position: absolute;
   z-index: 2;
-  padding: 20px;
-  width: fit-content;
+  padding: 18px;
   background-color: #FFFBF6;
-  margin-top: 185px;
+  margin-top: 200px;
   border-radius: 5px;
+  margin-right: -50px;
 
-  /* display: flex;
-  flex-direction: column;
-  justify-content: flex-start; */
 }
 
 .forBizButton {
