--- a/react-vite/src/components/UserPage/Overview.css
+++ b/react-vite/src/components/UserPage/Overview.css
@@ -3,12 +3,13 @@
     padding: 1em;
     background-color: #FFFBF6;
     border-radius: 3px;
-    border: #1f2f44 solid 1px;
+    border: #c3cddf solid 1px;
 }
 
 #user-details{
     display:flex;
     flex-direction: row;
+    padding: 22.36px;
 }
 
 .details-indiv{
